--- a/public/style.css
+++ b/public/style.css
@@ -90,7 +90,7 @@ body {
     position: relative;
     width: 100%;
     height: 100%; /* Force le remplissage vertical */
-    object-fit: contain; /* Garde les proportions sans couper */
+    object-fit: cover; /* Garde les proportions sans couper */
     mix-blend-mode: normal;
     will-change: opacity, transform;
 }
@@ -110,6 +110,7 @@ body {
 .title {
     font-size: 32px;
     font-weight: 400;
+    margin-top: 16px;
     text-transform: uppercase;
     line-height: 100%;
     opacity: 0; 
